# gringotts

./: .gitignore  README.pod
c-src/: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  gringotts.desktop.in  gringotts.spec.in
c-src/pixmaps/: Makefile.am  Makefile.in  gringotts-32.xpm  gringotts.xpm
c-src/po/: CMakeLists.txt  ChangeLog  POTFILES.in  de.po  fr.po  gringotts.pot  it.po  pl.po  ru.po
c-src/src/: Makefile.am  Makefile.in  grg_attachs.c  grg_attachs.h  grg_defs.h  grg_entries.c  grg_entries.h  grg_entries_vis.c  grg_entries_vis.h  grg_list.c  grg_list.h  grg_menus.c  grg_menus.h  grg_pix.c  grg_pix.h  grg_popt.c  grg_popt.h  grg_prefs.c  grg_prefs.h  grg_prefs_io.c  grg_prefs_io.h  grg_pwd.c  grg_pwd.h  grg_recent_dox.c  grg_recent_dox.h  grg_safe.c  grg_safe.h  grg_widgets.c  grg_widgets.h  grg_xpm.c  gringotts.c  gringotts.h
libgringotts/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  libgringotts.pc.in  libgringotts.spec  libgringotts.spec.in
libgringotts/docs/: Makefile.am  Makefile.in  manual.htm
libgringotts/src/: Makefile.am  Makefile.in  libgrg_crypt.c  libgrg_crypt.h  libgrg_structs.c  libgrg_structs.h  libgrg_tmp.c  libgrg_utils.c  libgrg_utils.h  libgringotts.h  test.c
python3-src/: Makefile  grg_py.py
python3-src/tests/data/: rindolf.grg
site/wml/: Makefile  gen-feeds.pl  gen-helpers.pl  params-latemp.yml  template.wml
site/wml/lib/: MyManageNews.pm  MyNavData.pm  MyNavLinks.pm  texts.wml
site/wml/src/common/: print.css  style.css
site/wml/src/main/: about.html.wml  index.html.wml  links.html.wml
site/wml/src/main/download/arcs/: gringotts-1.2.10.tar.xz  gringotts-1.2.9.tar.xz  libgringotts-1.2.1.tar.bz2
